[package]
name = "zipfc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zipf = "7.0.0"
rand = { version = "0.8.5", features = ["small_rng"] }
once_cell = "1.18.0"
bloomfilter = "1"
rand_xoshiro = "0.6.0"

[lib]
name = "zipfc"
crate-type = ["staticlib"]

[profile.release]
panic = "abort"

[profile.dev]
panic = "abort"
